--- a/static/css/videopi.css
+++ b/static/css/videopi.css
@@ -25,7 +25,16 @@
 	background-size: 18px 18px;
 }
 
-.ui-controlgroup-horizontal {
-  display: table;
-  margin: 0 auto;
+.well {
+	min-height: 20px;
+	padding: 10px;
+	margin-bottom: 10px;
+	background-color: #e5f1f4;
+	border: 1px solid #e3e3e3;
+	-webkit-border-radius: 5px;
+	 -moz-border-radius: 5px;
+	      border-radius: 5px;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+	 -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+	      box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 }
