--- a/static/css/videopi.css
+++ b/static/css/videopi.css
@@ -11,3 +11,25 @@
 	 -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 	      box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 }
+
+.ui-icon-power {
+	background-image: url("/static/img/power.png");
+	background-size: 18px 18px;
+}
+
+.ui-icon-restart {
+	background-image: url("/static/img/restart.png");
+	background-size: 18px 18px;
+}
+
+.ui-icon-ihome {
+	background-image: url("/static/img/home.png");
+	background-size: 18px 18px;
+}
+
+input.ui-slider-input {
+	display: none !important;
+}
+.ui-slider-track, .ui-slider-switch {
+	margin: 0 0;
+}
